--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trace",
+  "name": "trace-fail",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
@@ -16,6 +16,7 @@
     "gulp-notify": "^1.5.0",
     "gulp-plumber": "^0.6.5",
     "gulp-stylus": "^1.3.0",
-    "nib": "^1.0.3"
+    "nib": "^1.0.3",
+    "trace": "^1.0.2"
   }
 }
