--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "clarify": "^1.0.2",
+    "clarify": "*",
     "gulp": "^3.8.7",
     "gulp-autoprefixer": "0.0.10",
     "gulp-load-plugins": "^0.6.0",
@@ -17,6 +17,6 @@
     "gulp-plumber": "^0.6.5",
     "gulp-stylus": "^1.3.0",
     "nib": "^1.0.3",
-    "trace": "^1.0.2"
+    "trace": "*"
   }
 }
